# gpt-detector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.inference  Dockerfile.train  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  STRUCTURE.md  app.py  build_and_push_inference.sh  build_model.sh  data_process.py  evaluation.py  model.py  pyproject.toml  requirements-deploy.txt  requirements-dev.txt  requirements.txt  setup.py  utils.py
.github/workflows/: ci.yml  publish.yml
ai_detection/: inference.py  train.py
data/test/: data-00000-of-00001.arrow  state.json
data/train/: data-00000-of-00001.arrow  state.json
data/val/: data-00000-of-00001.arrow  dataset_info.json  state.json
deployment/: handler.py  lambda-sagemaker-api.py
deployment/docker/: Dockerfile.lambda
deployment/terraform/: network.tf  providers.tf  storage.tf  variables.tf
docs/: API.md  DEPLOYMENT.md  README.md
examples/: README.md  batch_inference.py  evaluation.py  simple_inference.py
postman/: query.postman_collection.json
saved_models/: metric.pkl
scripts/: build_and_push_lambda.sh  build_and_push_train.sh
src/gpt_detector/: __init__.py  app.py  data_process.py  model.py  utils.py
src/gpt_detector/config/: hyperparameters.json
src/gpt_detector/training/: __init__.py  inference.py  pipeline_train.py  step_deploy.py  train.py
templates/: my_template.html
terraform/: local.tf  main.tf
tests/: conftest.py  test_dataprocess.py  test_model.py  test_train_roberta.py  test_utils.py
